add CJS → ESM alternatives

--- a/webpack.config.cjs.json
+++ b/webpack.config.cjs.json
@@ -1,7 +1,8 @@
 {
 	"mode": "none",
 	"output": {
-		"clean": true
+		"clean": true,
+		"library": { "type": "commonjs" }
 	},
 	"target": "node"
 }
