--- a/packages/esm/esm-distro/package.json
+++ b/packages/esm/esm-distro/package.json
@@ -1,7 +1,7 @@
 {
   "name": "esm-with-esm-distro",
   "version": "1.0.0",
-  "description": "Example of a package with source-code using CJS and distribution code using ESM.",
+  "description": "Example of a package with ESM source-code that distributes ESM code.",
   "type": "module",
   "exports": {
     ".": "./dist/main.js",
@@ -20,7 +20,7 @@
   "author": "Jacob Smith",
   "license": "ISC",
   "devDependencies": {
-    "webpack": "^5.63.0",
-    "webpack-cli": "^4.9.1"
+    "webpack": "5.63.0",
+    "webpack-cli": "4.9.1"
   }
 }
