--- a/packages/esm/dual/wrapper-distro/package.json
+++ b/packages/esm/dual/wrapper-distro/package.json
@@ -2,7 +2,8 @@
   "name": "cjs-with-dual-distro",
   "version": "1.0.0",
   "description": "Example of a package with CJS source-code that distributes CJS as ESM code.",
-  "main": "./dist/main.js",
+  "type": "commonjs",
+  "engines": { "node": ">=12.22.7" },
   "exports": {
     ".": {
       "import": "./dist/wrapper.mjs",
