cleanup webpack configs & switch esm source → type: module + .cjs

--- a/packages/cjs/cjs-distro/package.json
+++ b/packages/cjs/cjs-distro/package.json
@@ -9,7 +9,7 @@
     "./package.json": "./package.json"
   },
   "scripts": {
-    "build": "webpack --config=./webpack.config-cjs.js"
+    "build": "webpack --config=../../../webpack.config.cjs.json"
   },
   "keywords": [
     "cjs",
