--- a/packages/esm/dual/wrapper-distro/package.json
+++ b/packages/esm/dual/wrapper-distro/package.json
@@ -2,18 +2,18 @@
   "name": "cjs-with-dual-distro",
   "version": "1.0.0",
   "description": "Example of a package with CJS source-code that distributes CJS as ESM code.",
-  "type": "commonjs",
+  "type": "module",
   "engines": { "node": ">=12.22.7" },
   "exports": {
     ".": {
-      "import": "./dist/wrapper.mjs",
-      "require": "./dist/main.js",
-      "default": "./dist/main.js"
+      "import": "./dist/wrapper.js",
+      "require": "./dist/main.cjs",
+      "default": "./dist/main.cjs"
     },
     "./package.json": "./package.json"
   },
   "scripts": {
-    "build": "webpack --config=./webpack.config-cjs.js"
+    "build": "webpack --config=./webpack.config-cjs.cjs"
   },
   "keywords": [
     "cjs",
