--- a/packages/esm/esm-distro/package.json
+++ b/packages/esm/esm-distro/package.json
@@ -9,7 +9,7 @@
     "./package.json": "./package.json"
   },
   "scripts": {
-    "build": "webpack"
+    "build": "webpack --config=../webpack.config-esm.cjs"
   },
   "keywords": [
     "cjs",
